23/09/14 -*- Version 2.2.0 -*- 

23/09/14 Julien Dutheil
* Fixed bug #73

16/09/14 Julien Dutheil
* Fixed bug #79

24/07/14 Julien Dutheil
* Alphabet code gets a refreshment!

05/03/13 -*- Version 2.1.0 -*- 

07/02/13 Julien Dutheil
* StateProperties => Alphabet index (dir renamed).
* New BppO classes forAlphabet Index 1 and 2, and corresponding methods in SequenceApplicationTools.

19/01/13 Julien Dutheil
* Compiles with -Wconversion.

09/01/13 Julien Dutheil
* Use size_t instead of unsigned int for indexes in containers.

17/09/12 Julien Dutheil
* Reorganized IO classes.

11/09/12 Julien Dutheil
* Added generic container converter function.

30/07/12 Julien Dutheil
* Moved features, fastq and maf to new bpp-seq-omics library.

18/07/12 Julien Dutheil
* Bug fixed in merge maf iterator, in case a sequence is missing in one of the two blocks.

25/06/12 Julien Dutheil
* Extended maf tools and reorganization of the code.
* Extended GFF output.
* New [] operator in SequenceFeatureSet.

18/06/12 Julien Dutheil
* Fixed bug in Maf parser: scores are now parsed correctly.

08/03/12 Julien Dutheil
* Added support for '*' character in proteins (stop codon)

09/02/12 -*- Version 2.0.3 -*-

16/01/12 Julien Dutheil
* Bug #42 solved, new support for extended fasta parser in application tools.
* Added contribution from Benoit Nabholz and Annabelle Haudry on 4-fold degenerated sites.

06/01/12 Julien Dutheil
* Added support for "!" state in nucleic alphabet, which can be either a gap or an unknown character.

24/11/11 Julien Dutheil
* Added SequenceWalker class and test.

22/11/11 Sylvain Gaillard
* Added support for FastQ

21/11/11 Julien Dutheil
* Added support for GFF3.

21/11/11 Sylvain Gaillard
* Bug #35 solved.

18/11/11 Julien Dutheil
* New MafIterators: SequenceStatistics and PairwiseSequenceStatistics.
* Function SequenceTools::getPercentIdentity now allows to exclude gaps.

15/09/11 Julien Dutheil